# bitvm-demo-api

./: .gitignore  Cargo.toml  README.md  log4rs.yml
data-dir/: dummy_proof.json
src/: api.rs  config.rs  main.rs  setup.rs  sql.rs  transactions.rs  utils.rs
